fixed text align center for secttion headings

--- a/assets/sass/layout/_cooking-guide.scss
+++ b/assets/sass/layout/_cooking-guide.scss
@@ -1,7 +1,9 @@
 .cooking-guide {
   position: relative;
   background-color: $bg-color;
-  text-align: center;
+  
+  @include breakpoints(ipad-mini) { text-align: center; }
+
 
   &__cards {
     padding-top: 45px;
